--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "buildTailwind": "tailwindcss -i ./styles/input.css -o ./styles/main.css",
+    "watch": "tailwindcss -i ./styles/input.css -o ./styles/main.css --watch"
   },
   "dependencies": {
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "bootstrap": "^5.2.3",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
