--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "buildTailwind": "tailwindcss -i ./styles/input.css -o ./styles/main.css",
-    "watch": "tailwindcss -i ./styles/input.css -o ./styles/main.css --watch"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
+    "react-redux": "^8.0.5",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
