--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "next": "13.0.6",
