--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-lazy-load": "^4.0.1",
+    "react-loading-skeleton": "^3.1.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "react-slick": "^0.29.0",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
