--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^9.0.4",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
