--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
@@ -18,6 +19,8 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.4",
     "next": "13.0.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "purgecss": "^5.0.0",
     "tailwindcss": "^3.2.6"
   }
 }
