--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "purgecss": "^5.0.0",
